Improve error handling in AddDebugIntrinsicsPhase
PROBLEM: Silent failures in reflection-based field access.
If API changes or reflection fails, intrinsics silently not generated.

SOLUTION:
1. Specific exception handling (NoSuchMethodException, IllegalAccessException)
2. Detailed error messages with recovery suggestions
3. Fatal errors for API incompatibility (throw, not print)
4. Warnings for expected failures (no IO field)
5. Error context (module name, field name)

This prevents silent failures and helps debug API changes.