@@ -31,6 +31,11 @@ import java.lang.reflect.Method
   * - No dependency on removed FIRRTL IR classes
   * - Compatible with Chisel 6+ API
   * 
+  * ERROR HANDLING:
+  * - Fatal errors (API incompatibility): throw RuntimeException
+  * - Warnings (expected failures): log to stderr, continue
+  * - Silent (normal cases): no output
+  * 
   * @see https://github.com/jarlb/chiseltrace
   */
 class AddDebugIntrinsicsPhase extends Phase {
@@ -58,19 +63,9 @@ class AddDebugIntrinsicsPhase extends Phase {
     
     println("[Chisel Debug] Generating debug intrinsics for type metadata...")
     
-    // FIX 1: Safely extract circuit from ChiselCircuitAnnotation using reflection
-    // This handles cases where it's not a case class or fields are protected in newer Chisel versions
+    // Extract circuit from ChiselCircuitAnnotation with robust error handling
     val circuitOpt = annotations.collectFirst {
-      case a: ChiselCircuitAnnotation => 
-        try {
-          // Use reflection to access 'circuit' method/field
-          val method = a.getClass.getMethod("circuit")
-          method.invoke(a).asInstanceOf[chisel3.ElaboratedCircuit]
-        } catch {
-          case _: Throwable => 
-            println("[Chisel Debug] Warning: Could not access .circuit on ChiselCircuitAnnotation")
-            null
-        }
+      case a: ChiselCircuitAnnotation => extractCircuit(a)
     }.filter(_ != null)
     
     circuitOpt match {
@@ -80,29 +75,185 @@ class AddDebugIntrinsicsPhase extends Phase {
         annotations
         
       case None =>
-        println("[Chisel Debug] Warning: No circuit found, skipping intrinsic generation")
+        System.err.println(
+          "[Chisel Debug] WARNING: No elaborated circuit found.\n" +
+          "  Debug intrinsics will not be generated.\n" +
+          "  This may indicate a compilation issue or missing ChiselCircuitAnnotation."
+        )
         annotations
     }
   }
   
   /**
+    * Extract ElaboratedCircuit from ChiselCircuitAnnotation using reflection.
+    * 
+    * CRITICAL: This uses reflection because ChiselCircuitAnnotation API has changed
+    * across Chisel versions. If API changes break reflection, this will FAIL LOUDLY.
+    * 
+    * @param annotation ChiselCircuitAnnotation containing the elaborated circuit
+    * @return ElaboratedCircuit or null on failure
+    * @throws RuntimeException on fatal API incompatibility
+    */
+  private def extractCircuit(annotation: ChiselCircuitAnnotation): chisel3.ElaboratedCircuit = {
+    try {
+      // Try to access 'circuit' method (Chisel 6+ API)
+      val method = annotation.getClass.getMethod("circuit")
+      method.invoke(annotation).asInstanceOf[chisel3.ElaboratedCircuit]
+      
+    } catch {
+      case e: NoSuchMethodException =>
+        // FATAL: API has changed, reflection cannot find expected method
+        val msg = 
+          s"""[Chisel Debug] FATAL ERROR: ChiselCircuitAnnotation API incompatibility detected.
+             |  Expected method: circuit()
+             |  Available methods: ${annotation.getClass.getMethods.map(_.getName).mkString(", ")}
+             |  
+             |  REQUIRED ACTION:
+             |  Update chisel3.stage.phases.AddDebugIntrinsicsPhase to match current Chisel API.
+             |  Check ChiselCircuitAnnotation source for correct accessor method.
+             |  
+             |  Error details: ${e.getMessage}
+             |""".stripMargin
+        
+        System.err.println(msg)
+        throw new RuntimeException("Debug intrinsics phase failed due to API incompatibility", e)
+        
+      case e: IllegalAccessException =>
+        // FATAL: Method exists but is not accessible (private/protected)
+        val msg =
+          s"""[Chisel Debug] FATAL ERROR: Cannot access circuit() method on ChiselCircuitAnnotation.
+             |  Method exists but is not accessible (private/protected).
+             |  
+             |  REQUIRED ACTION:
+             |  Chisel API has changed access modifiers. Update reflection code to use:
+             |  1. getDeclaredMethod + setAccessible(true), or
+             |  2. Alternative accessor if available
+             |  
+             |  Error details: ${e.getMessage}
+             |""".stripMargin
+        
+        System.err.println(msg)
+        throw new RuntimeException("Debug intrinsics phase failed due to access violation", e)
+        
+      case e: ClassCastException =>
+        // FATAL: circuit() returns unexpected type
+        val msg =
+          s"""[Chisel Debug] FATAL ERROR: circuit() method returns unexpected type.
+             |  Expected: chisel3.ElaboratedCircuit
+             |  Got: ${e.getMessage}
+             |  
+             |  REQUIRED ACTION:
+             |  Chisel API has changed return type. Update cast in extractCircuit().
+             |  
+             |  Error details: ${e.getMessage}
+             |""".stripMargin
+        
+        System.err.println(msg)
+        throw new RuntimeException("Debug intrinsics phase failed due to type mismatch", e)
+        
+      case e: Throwable =>
+        // Unexpected error - log and rethrow for debugging
+        val msg =
+          s"""[Chisel Debug] UNEXPECTED ERROR in extractCircuit().
+             |  This may indicate a serious issue with reflection or Chisel API.
+             |  
+             |  Error type: ${e.getClass.getName}
+             |  Error message: ${e.getMessage}
+             |  Stack trace:
+             |""".stripMargin
+        
+        System.err.println(msg)
+        e.printStackTrace()
+        throw new RuntimeException("Debug intrinsics phase failed unexpectedly", e)
+    }
+  }
+  
+  /**
     * Process the elaborated circuit and generate intrinsics.
+    * 
+    * Extracts top module from circuit.topDefinition using reflection.
     */
   private def processCircuit(circuit: chisel3.ElaboratedCircuit): Unit = {
-    // FIX 2: Extract BaseModule from Definition using reflection
-    // circuit.topDefinition returns a Definition[T], which wraps the actual module in 'proto'
     try {
       val topDef = circuit.topDefinition
       
-      // Definition wraps the module in a private 'proto' field
-      val protoField = topDef.getClass.getDeclaredField("proto")
-      protoField.setAccessible(true)
-      val topModule = protoField.get(topDef).asInstanceOf[BaseModule]
+      // Definition[T] wraps the module in a 'proto' field
+      val topModule = try {
+        val protoField = topDef.getClass.getDeclaredField("proto")
+        protoField.setAccessible(true)
+        protoField.get(topDef).asInstanceOf[BaseModule]
+        
+      } catch {
+        case e: NoSuchFieldException =>
+          val msg =
+            s"""[Chisel Debug] FATAL ERROR: Cannot find 'proto' field in Definition class.
+               |  Chisel Definition API has likely changed.
+               |  
+               |  REQUIRED ACTION:
+               |  Inspect Definition class source for new field name.
+               |  Update reflection code in processCircuit().
+               |  
+               |  Available fields: ${topDef.getClass.getDeclaredFields.map(_.getName).mkString(", ")}
+               |  Error details: ${e.getMessage}
+               |""".stripMargin
+          
+          System.err.println(msg)
+          throw new RuntimeException("Cannot extract top module from Definition", e)
+          
+        case e: IllegalAccessException =>
+          val msg =
+            s"""[Chisel Debug] FATAL ERROR: Cannot access 'proto' field in Definition.
+               |  Field exists but access was denied even after setAccessible(true).
+               |  This may indicate JVM security restrictions.
+               |  
+               |  REQUIRED ACTION:
+               |  1. Check if running with SecurityManager enabled
+               |  2. Add JVM flag: --add-opens=chisel3/chisel3=ALL-UNNAMED
+               |  3. Use alternative API if available
+               |  
+               |  Error details: ${e.getMessage}
+               |""".stripMargin
+          
+          System.err.println(msg)
+          throw new RuntimeException("Cannot access top module due to security restrictions", e)
+          
+        case e: ClassCastException =>
+          val msg =
+            s"""[Chisel Debug] FATAL ERROR: 'proto' field is not BaseModule.
+               |  Expected type: BaseModule
+               |  Actual type: ${e.getMessage}
+               |  
+               |  REQUIRED ACTION:
+               |  Definition.proto type has changed. Update cast in processCircuit().
+               |  
+               |  Error details: ${e.getMessage}
+               |""".stripMargin
+          
+          System.err.println(msg)
+          throw new RuntimeException("Top module has unexpected type", e)
+      }
       
       processModule(topModule)
+      
     } catch {
+      case e: RuntimeException =>
+        // Re-throw fatal errors from inner try-catch
+        throw e
+        
       case e: Exception =>
-        println(s"[Chisel Debug] Error extracting top module: ${e.getMessage}")
+        val msg =
+          s"""[Chisel Debug] ERROR: Failed to process circuit.
+             |  This may be due to unexpected Chisel API changes.
+             |  
+             |  Error type: ${e.getClass.getName}
+             |  Error message: ${e.getMessage}
+             |  
+             |  Stack trace:
+             |""".stripMargin
+        
+        System.err.println(msg)
+        e.printStackTrace()
+        throw new RuntimeException("Circuit processing failed", e)
     }
   }
   
@@ -111,6 +262,10 @@ class AddDebugIntrinsicsPhase extends Phase {
     * 
     * Uses reflection to access module fields since we don't have
     * direct API for iterating components in Chisel 6+.
+    * 
+    * This method uses WARNING (not FATAL) error handling because:
+    * - Some modules legitimately have no IO (e.g., RawModule)
+    * - IO field access failures are expected in some cases
     */
   private def processModule(module: BaseModule): Unit = {
     // Create implicit SourceInfo for intrinsic generation
@@ -120,7 +275,6 @@ class AddDebugIntrinsicsPhase extends Phase {
     
     // Process IO bundle if it exists
     try {
-      // Try to access 'io' field via reflection
       val moduleClass = module.getClass
       val ioField = moduleClass.getDeclaredField("io")
       ioField.setAccessible(true)
@@ -131,21 +285,46 @@ class AddDebugIntrinsicsPhase extends Phase {
           println(s"[Chisel Debug]   Processing IO for module: $moduleName")
           DebugIntrinsic.emitRecursive(data, "io", "IO")
           
-        case _ =>
-          println(s"[Chisel Debug]   Warning: IO field is not Data type in $moduleName")
+        case null =>
+          System.err.println(
+            s"[Chisel Debug]   WARNING: IO field is null in module '$moduleName'.\n" +
+            s"    This may indicate an uninitialized IO or constructor issue."
+          )
+          
+        case other =>
+          System.err.println(
+            s"[Chisel Debug]   WARNING: IO field has unexpected type in module '$moduleName'.\n" +
+            s"    Expected: chisel3.Data\n" +
+            s"    Actual: ${other.getClass.getName}\n" +
+            s"    Debug intrinsics will not be generated for this module's IO."
+          )
       }
+      
     } catch {
       case _: NoSuchFieldException =>
-        // Module has no io field (e.g., RawModule)
-        println(s"[Chisel Debug]   Module $moduleName has no IO field")
+        // Expected: Module has no 'io' field (e.g., RawModule, internal modules)
+        // This is not an error, just info
+        println(s"[Chisel Debug]   Module '$moduleName' has no IO field (expected for RawModule)")
+        
+      case e: IllegalAccessException =>
+        // Unexpected: setAccessible(true) should prevent this
+        System.err.println(
+          s"[Chisel Debug]   WARNING: Cannot access IO field in module '$moduleName'.\n" +
+          s"    setAccessible(true) was called but access still denied.\n" +
+          s"    This may indicate JVM security restrictions.\n" +
+          s"    Error: ${e.getMessage}"
+        )
         
       case e: Exception =>
-        println(s"[Chisel Debug]   Warning: Failed to process IO for $moduleName: ${e.getMessage}")
+        // Unexpected error during IO processing
+        System.err.println(
+          s"[Chisel Debug]   ERROR: Failed to process IO for module '$moduleName'.\n" +
+          s"    Error type: ${e.getClass.getName}\n" +
+          s"    Error message: ${e.getMessage}\n" +
+          s"    Continuing with other modules..."
+        )
+        // Don't throw - continue processing other modules
     }
-    
-    // Optional: Process other Data fields (wires, regs)
-    // This is more invasive and may generate many intrinsics
-    // For MVP, we focus on IO which is the main debugging interface
   }
 }
 
